--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,48 @@
+# Python bytecode and cache
 __pycache__/
-*.pyc
+*.py[cod]
 *.pyo
+*.pyd
 *.log
-scrapy.cfg
+
+# Virtual environment
+.env/
+venv/
+env/
+
+# Scrapy cache
+.scrapy/
+
+# Django-related files
+db.sqlite3
+media/
+staticfiles/
+*.db
+
+# Environment variables and secrets
 .env
-ollama/
+*.env
+
+# Docker-specific files
+*.pid
+*.sock
+
+# OS-specific files
+.DS_Store
+Thumbs.db
+
+# Editor/IDE-specific files
+.idea/
+.vscode/
+*.swp
+*.swo
+
+# Logs and debug output
+*.log
+logs/
+
+# Node.js (if applicable for frontend dependencies)
+node_modules/
+npm-debug.log
+yarn-debug.log
+yarn-error.log
