--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,6 +23,9 @@ services:
   django_app:
     build:
       context: .
+      dockerfile: Dockerfile
+    env_file: 
+      - .env
     container_name: django_app
     depends_on:
       db:
@@ -38,8 +41,7 @@ services:
     ports:
       - "8000:8000"
     volumes:
-      - ./app:/usr/src/app
-      - /var/run/docker.sock:/var/run/docker.sock
+      - ./llm:/usr/src/app
     networks:
       - app_network
 
